<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="last_updated">Last Updated</string>
    <string name="description">Description</string>
    <string name="language">Language</string>
    <string name="user_image">User Image</string>
    <string name="back_button">Back Button</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
</resources>