<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.view.detail.DetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/ab_detail"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tb_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="16dp">

                <ImageView
                    android:id="@+id/iv_detail_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/back_button"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_detail_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_detail_back"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="텍스트검색" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_detail_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ab_detail">


        <ImageView
            android:id="@+id/iv_detail_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/user_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_baseline_person_24" />

        <TextView
            android:id="@+id/tv_detail_repo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/iv_detail_image"
            app:layout_constraintTop_toTopOf="parent"
            tools:hint="김현국" />

        <TextView
            android:id="@+id/tv_detail_stars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            app:layout_constraintStart_toEndOf="@id/iv_detail_image"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_repo_name"
            tools:hint="star" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_230"
        app:layout_constraintBottom_toTopOf="@id/cl_detail_description"
        app:layout_constraintTop_toBottomOf="@id/cl_detail_top" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_detail_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_detail_top">

        <ImageView
            android:id="@+id/iv_detail_description"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/description"
            android:src="@drawable/ic_baseline_info_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_detail_description_big"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_detail_description_big"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_detail_description"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_detail_description_small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_detail_description_big"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_description_big"
            tools:text="small Description" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_230"
        app:layout_constraintBottom_toTopOf="@id/cl_detail_language"
        app:layout_constraintTop_toBottomOf="@id/cl_detail_description" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_detail_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_detail_description">

        <ImageView
            android:id="@+id/iv_detail_language"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/language"
            android:src="@drawable/ic_baseline_language_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_detail_language_big"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_detail_language_big"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_detail_language"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_detail_language_small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_detail_language_big"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_language_big"
            tools:text="small Language" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_230"
        app:layout_constraintBottom_toTopOf="@id/cl_detail_last_update"
        app:layout_constraintTop_toBottomOf="@id/cl_detail_language" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_detail_last_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_detail_language">

        <ImageView
            android:id="@+id/iv_detail_last_update"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/last_updated"
            android:src="@drawable/ic_baseline_update_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_detail_last_update_big"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_detail_last_update_big"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/last_updated"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_detail_last_update"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_detail_last_update_small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_detail_last_update_big"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_last_update_big"
            tools:text="small last update" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/vw_detail_top"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_230"
        app:layout_constraintTop_toBottomOf="@id/cl_detail_last_update" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_detail_followers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/vw_detail_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_detail_follower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/followers"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_detail_user_follower"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_follower"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/vw_detail_bottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_230"
        app:layout_constraintTop_toBottomOf="@id/cl_detail_followers" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_detail_following"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/vw_detail_bottom"
        >
        <TextView
            android:id="@+id/tv_detail_following"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/following"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_detail_user_following"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_following"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>